--- a/app/src/main/res/layout/activity_create_contact.xml
+++ b/app/src/main/res/layout/activity_create_contact.xml
@@ -22,6 +22,12 @@
         android:orientation="vertical"
         app:layout_constraintGuide_begin="205dp" />
 
+    <include
+        android:id="@+id/custom_action_bar"
+        layout="@layout/custom_action_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/phoneNumberTxt"
         android:layout_width="wrap_content"
