--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".Activities.MessagesActivity">
 
+    <include
+        android:id="@+id/custom_action_bar"
+        layout="@layout/custom_action_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messagesRecyclerView"
         android:layout_width="380dp"
