--- a/app/src/main/res/layout/contacts_list_item.xml
+++ b/app/src/main/res/layout/contacts_list_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="0dp">
+    android:layout_margin="8dp"
+    android:elevation="2dp"
+    android:padding="16dp">
 
     <RelativeLayout
         android:id="@+id/containerLayout"
@@ -76,4 +77,4 @@
                 android:src="@drawable/ic_messages" />
         </RelativeLayout>
     </RelativeLayout>
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
