--- a/app/src/main/res/layout/custom_action_bar.xml
+++ b/app/src/main/res/layout/custom_action_bar.xml
@@ -4,14 +4,15 @@
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
     android:background="@color/black"
-    android:padding="10dp">
+    android:padding="20dp">
 
     <ImageView
         android:id="@+id/left_arrow_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="20dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="10dp"
         android:contentDescription="@string/left_arrow_icon"
         android:src="@drawable/ic_left_arrow" />
 
@@ -22,14 +23,15 @@
         android:layout_centerInParent="true"
         android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:textSize="24sp" />
 
     <ImageView
         android:id="@+id/settings_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="40dp"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="10dp"
         android:contentDescription="@string/settings_icon"
         android:src="@drawable/ic_settings" />
 
