fix Contact list is now a ListView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,16 +25,13 @@
         android:layout_width="wrap_content"
         android:layout_height="680dp"
         android:layout_alignTop="@+id/emptyView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp" />
+        android:layout_centerInParent="true"
+        android:layout_marginTop="120dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="740dp"
+        android:layout_marginTop="700dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp">
 
