--- a/app/src/main/res/layout/activity_create_contact.xml
+++ b/app/src/main/res/layout/activity_create_contact.xml
@@ -182,7 +182,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="640dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp">
 
