--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="?android:attr/colorForeground"
     tools:context=".Activities.SettingsActivity">
 
     <include
@@ -21,6 +22,7 @@
         android:paddingStart="40dp"
         android:paddingEnd="40dp"
         android:text="@string/languages_txt"
+        android:textColor="@color/black"
         android:textSize="24sp" />
 
     <RelativeLayout
@@ -58,6 +60,7 @@
         android:paddingStart="40dp"
         android:paddingEnd="40dp"
         android:text="@string/header_colors_txt"
+        android:textColor="@color/black"
         android:textSize="24sp" />
 
     <RelativeLayout
