--- a/app/src/main/res/layout/contacts_list_item.xml
+++ b/app/src/main/res/layout/contacts_list_item.xml
@@ -28,7 +28,7 @@
                 android:layout_centerInParent="true"
                 android:contentDescription="@string/contact_image_description"
                 android:padding="10dp"
-                android:src="@drawable/random_face" />
+                android:src="@drawable/default_avatar" />
 
         </RelativeLayout>
 
